# merv

./: .gitignore  EVALUATION.md  LICENSE  README.md  TRAINING.md  eval_1gpu_multi.sh  eval_1gpu_multi2.sh  eval_mcq.sh  pyproject.toml  slurm_submit.sh  train_hiera-noft_single.sh  train_hiera_merv_base.sh  train_hiera_merv_base_five.sh  train_hiera_single.sh  train_hiera_single_test.sh
eval_data/dummy_mcq/: test_a.json  test_q.json
eval_data/dummy_openended/: test_a.json  test_q.json
merv/: __init__.py
merv/conf/: datasets.py  models.py
merv/models/: __init__.py  load_vid.py  materialize.py  registry.py
merv/models/backbones/llm/: __init__.py  base_llm.py  llama2.py  llama3.py  qwen2.py
merv/models/backbones/llm/prompting/: __init__.py  llama2_chat_prompter.py  qwen2_prompter.py  vicuna_v15_prompter.py
merv/models/backbones/video/: __init__.py  base_video.py  dinov2_video.py  hiera.py  siglip.py  vivit.py
merv/models/backbones/video/languagebind/: __init__.py
merv/models/backbones/video/languagebind/image/: configuration_image.py  modeling_image.py  processing_image.py  tokenization_image.py
merv/models/backbones/video/languagebind/video/: configuration_video.py  modeling_video.py  processing_video.py  tokenization_video.py
merv/models/vidlms/: __init__.py  base_vidlm.py  merv.py
merv/overwatch/: overwatch.py
merv/preprocessing/: download.py  materialize.py
merv/preprocessing/datasets/: __init__.py  datasets.py
merv/training/: materialize.py  metrics.py
merv/training/strategies/: base_strategy.py  ddp.py  fsdp.py
merv/util/: __init__.py  batching_utils.py  data_utils.py  flops_utils.py  nn_utils.py
scripts/: eval_gpt.py  eval_gpt_batch.py  eval_mcq.py  eval_openended.py  eval_tempcompass.py  preprocess.py  pretrain_video.py  quick_start.py
